starting script for windows installer added